src/third_party/blink/web_tests/virtual/web-components-v0-disabled/fast/dom/custom/reparent-unwrapped-custom-element-crash-expected.txt
CONSOLE ERROR: line 4: Uncaught TypeError: document.registerElement is not a function
PASS successfullyParsed is true

TEST COMPLETE

If this doesn't crash, it passed.
